--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -42,7 +42,7 @@ mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
 nodeenv==1.3.3
-notebook==5.4.1
+notebook>=5.7.8
 numpydoc==0.8.0
 openpyxl==2.5.2
 packaging==17.1
