--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -76,7 +76,7 @@ toml==0.10.0
 tornado==5.0.2
 traitlets==4.3.2
 typing==3.6.4
-urllib3==1.22
+urllib3>=1.24.2
 virtualenv==16.1.0
 wcwidth==0.1.7
 webencodings==0.5.1
