--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -60,7 +60,7 @@ pyparsing==2.2.0
 PySocks==1.6.8
 python-dateutil==2.7.2
 pytz==2018.4
-PyYAML==3.13
+pyyaml>=4.2b1
 pyzmq==17.0.0
 qtconsole==4.3.1
 requests==2.18.4
