--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,7 +14,7 @@ cffi==1.11.5
 cfgv==1.1.0
 chardet==3.0.4
 Click==7.0
-cryptography==2.2.2
+cryptography>=2.3
 decorator==4.3.0
 docutils==0.14
 entrypoints==0.2.3
@@ -56,7 +56,7 @@ ptyprocess==0.5.2
 pycparser==2.18
 Pygments==2.2.0
 pyOpenSSL==17.5.0
-pyparsing==2.2.0
+pyparsing==2.2.0cryptography>=2.3
 PySocks==1.6.8
 python-dateutil==2.7.2
 pytz==2018.4
