--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Peter\\Anaconda3\\envs\\schedule\\python.exe"
+    "python.pythonPath": "C:\\Users\\peter.kazarinoff\\AppData\\Local\\Continuum\\Anaconda3\\envs\\door-schedule\\python.exe"
 }
