--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+appdirs==1.4.3
+attrs==19.3.0
 beautifulsoup4==4.8.2
+black==19.10b0
 certifi==2019.11.28
 chardet==3.0.4
+Click==7.0
 colored==1.4.2
 et-xmlfile==1.0.1
 Gooey==1.0.3
@@ -8,11 +12,15 @@ idna==2.8
 jdcal==1.4.1
 numpy==1.18.1
 openpyxl==3.0.3
+pathspec==0.7.0
 Pillow==7.0.0
 psutil==5.6.7
+regex==2020.1.8
 requests==2.22.0
 six==1.14.0
 soupsieve==1.9.5
+toml==0.10.0
+typed-ast==1.4.1
 urllib3==1.25.7
 wincertstore==0.2
 wxPython==4.0.7.post2
