--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\peter.kazarinoff\\AppData\\Local\\Continuum\\Anaconda3\\envs\\door-schedule\\python.exe"
+    "python.pythonPath": "/usr/local/opt/python@2/bin/python2.7"
 }
