--- a/requirements.txt
+++ b/requirements.txt
@@ -6,21 +6,31 @@ certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 colored==1.4.2
+dateparser==0.7.2
 et-xmlfile==1.0.1
 Gooey==1.0.3
+humanize==0.5.1
 idna==2.8
 jdcal==1.4.1
+maya==0.6.1
 numpy==1.18.1
 openpyxl==3.0.3
 pathspec==0.7.0
+pendulum==2.0.5
 Pillow==7.0.0
 psutil==5.6.7
+python-dateutil==2.8.1
+pytz==2019.3
+pytzdata==2019.3
 regex==2020.1.8
 requests==2.22.0
 six==1.14.0
+snaptime==0.2.4
 soupsieve==1.9.5
+SQLAlchemy==1.3.13
 toml==0.10.0
 typed-ast==1.4.1
+tzlocal==2.0.0
 urllib3==1.25.7
 wincertstore==0.2
 wxPython==4.0.7.post2
