--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,15 @@ Click==7.0
 colored==1.4.2
 dateparser==0.7.2
 et-xmlfile==1.0.1
+Flask==1.1.1
 Gooey==1.0.3
 gunicorn==20.0.4
 humanize==0.5.1
 idna==2.8
+itsdangerous==1.1.0
 jdcal==1.4.1
+Jinja2==2.10.3
+MarkupSafe==1.1.1
 maya==0.6.1
 numpy==1.18.1
 openpyxl==3.0.3
@@ -33,5 +37,6 @@ toml==0.10.0
 typed-ast==1.4.1
 tzlocal==2.0.0
 urllib3==1.25.7
+Werkzeug==0.16.0
 wincertstore==0.2
 wxPython==4.0.7.post2
