--- a/environment.yml
+++ b/environment.yml
@@ -1,30 +1,8 @@
-name: schedule
+name: door-schedule
 channels:
-  - anaconda
   - defaults
 dependencies:
-  - beautifulsoup4=4.6.0=py36hd4cc5e8_1
-  - ca-certificates=2018.03.07=0
-  - certifi=2018.4.16=py36_0
-  - openssl=1.0.2o=h8ea7d77_0
-  - asn1crypto=0.24.0=py36_0
-  - cffi=1.11.5=py36h945400d_0
-  - chardet=3.0.4=py36h420ce6e_1
-  - cryptography=2.2.2=py36hfa6e2cd_0
-  - idna=2.6=py36h148d497_1
-  - pip=9.0.3=py36_0
-  - pycparser=2.18=py36hd053e01_1
-  - pyopenssl=17.5.0=py36h5b7d817_0
-  - pysocks=1.6.8=py36_0
-  - python=3.6.5=h0c2934d_0
-  - requests=2.18.4=py36h4371aae_1
-  - setuptools=39.0.1=py36_0
-  - six=1.11.0=py36h4db2310_1
-  - urllib3=1.22=py36h276f60a_0
-  - vc=14=h0510ff6_3
-  - vs2015_runtime=14.0.25123=3
-  - wheel=0.31.0=py36_0
-  - win_inet_pton=1.0.1=py36he67d7fd_1
-  - wincertstore=0.2=py36h7fe50ca_0
-prefix: C:\Users\Peter\Anaconda3\envs\schedule
-
+  - python=3.9
+  - requests
+  - beautifulsoup4
+  - openpyxl
